--- a/src/MoodLog.css
+++ b/src/MoodLog.css
@@ -2,6 +2,7 @@
     min-height: 100vh;
     background-color: #F3EBFF; 
     padding: 20px; 
+    padding-bottom: 80px;
     font-family: 'Inter', sans-serif;
     display: flex;
     flex-direction: column;
