--- a/src/Resources.css
+++ b/src/Resources.css
@@ -2,6 +2,7 @@
   min-height: 100vh;
   background-color: #F3EBFF; 
   padding: 20px;
+  padding-bottom: 80px;
   font-family: 'Inter', sans-serif;
   box-sizing: border-box;
 }
