--- a/src/Profile.css
+++ b/src/Profile.css
@@ -16,7 +16,7 @@
   text-align: center;
 }
 
-/* --- 1. User Information Card --- */
+/* --- User Information Card --- */
 .user-info-card {
     background: white;
     border-radius: 16px;
@@ -79,7 +79,7 @@
     background-color: #8B5FBF;
 }
 
-/* --- 2. Settings List --- */
+/* --- Settings List --- */
 .settings-list {
     display: flex;
     flex-direction: column;
@@ -129,7 +129,7 @@
     font-weight: 700;
 }
 
-/* --- 3. Log Out Button --- */
+/* --- Log Out Button --- */
 .logout-button {
     width: 100%;
     height: 55px;
